Fixed a problem with whitespace in the sidebar when not logged in

--- a/css/webplayer.css
+++ b/css/webplayer.css
@@ -118,6 +118,7 @@ div.tools
   position: fixed;
   text-align: center;
   bottom: 0px;
+  height: 16%;
 }
 
 
